--- a/properties.cfg
+++ b/properties.cfg
@@ -3,5 +3,5 @@
 
 currentMcVersion = 1.18.2
 description = \ Pack de Coroloworld V1.0 Hecho por Yug1900
-title = Coroloworld
+title = Coroloworld1.0
 version = 452
